--- a/business-landingpage/src/pages/services/services.css
+++ b/business-landingpage/src/pages/services/services.css
@@ -234,7 +234,7 @@
 }
 
 /* Responsive Adjustments */
-@media (max-width: 900px) {
+@media (max-width: 850px) {
   .about-us {
     flex-direction: column;
     text-align: center;
@@ -255,5 +255,12 @@
   .services-carousel, .gallery-carousel {
     scroll-snap-type: x mandatory;
     overflow-x: scroll;
+  }
+}
+
+@media (max-width: 575px) {
+  .key-features {
+    flex-direction: column;
+    align-items: center;
   }
 }
